# agentflow-computer-mcp

./: .gitignore  Dockerfile  INSTRUCTIONS-FOR-AI.md  README.md  install.bat  install.ps1  install.sh  pyproject.toml
.github/workflows/: ci.yml  docker-image.yml  installer-e2e.yml  installer-smoke.yml  macapp.yml  release-installer.yml
docker/: Dockerfile.assistant  Dockerfile.base  Dockerfile.coder  Dockerfile.universal  entrypoint.sh  install-addon.sh
docs/: SELFMOD.md
docs/plans/: 2026-05-23-multi-agent-runtime-impl.md  2026-05-23-multi-agent-selftest.md
docs/specs/: 2026-05-23-agentflow-cli.md  2026-05-23-mac-menu-bar-app.md  2026-05-23-multi-agent-runtime.md  2026-05-23-multi-agent-selftest.md  2026-05-23-setup-exe-v050.md  2026-05-23-windows-tray-app.md
installer/: agentflow-setup.spec  headless_install.py  make_icon.py  setup_gui.py  smoke.py  steps.json  steps.py  test_steps.py  tray_entry.py
launchd/: com.agentflow.computer-mcp.plist
macapp/: Package.swift  README.md
macapp/Sources/AgentFlow/: AgentFlowApp.swift  AppState.swift  AuthLoader.swift  DaemonControl.swift  MenuView.swift  Models.swift  RestClient.swift  SocketClient.swift  StatusFormatter.swift
macapp/Sources/AgentFlow/Resources/: Info.plist
macapp/Tests/AgentFlowTests/: AuthLoaderTests.swift  ModelsTests.swift  RestClientTests.swift  SocketClientTests.swift  StatusFormatterTests.swift
macapp/scripts/: build-app.sh
presets/: desktop-tasks.yaml
scripts/: install.ps1  install.sh  uninstall.ps1  uninstall.sh
src/agentflow_computer_mcp/: __main__.py  auth.py  auto_updater.py  config.py  confirm.py  desktop_cli.py  health.py  logging_setup.py  observability.py  scope.py  server.py  ws_client.py  ws_log_uploader.py
src/agentflow_computer_mcp/agents/: __init__.py  _runtime.py  bootstrap.py  budget.py  pool.py  router.py  slot.py  socket.py
src/agentflow_computer_mcp/autonomous/: AUTONOMOUS_BRANCH_MARKER.txt  __init__.py  budget.py  cli.py  memory.py  planner.py  schema.py  sub_agents.py  wake_cycle.py
src/agentflow_computer_mcp/cli/: __init__.py  agent.py  auth_cli.py  budget.py  daemon.py  format.py  goal.py  main.py  memory.py  rest_client.py  socket_client.py
src/agentflow_computer_mcp/driver/: __init__.py  af_client.py  chrome_cookies.py  desktop_tools.py  firefox.py  loop.py  presets.py  resolve_runtimes.py  selfmod.py  selfmod_worker.py  state.py  streamer.py  viewer.py
src/agentflow_computer_mcp/driver/prompts/: __init__.py  af_tools.py  browser.py  cabinet.py  coding.py  element.py  integrations.py  intent.py  knowledge.py  lolzteam.py  os_context.py  terminal.py
src/agentflow_computer_mcp/driver/tools/: __init__.py  agent_brief.py  integrations.py  project_setup.py
src/agentflow_computer_mcp/driver/tools/code_agents/: __init__.py  aider.py  base.py  cli_generic.py  goose.py  opencode.py
src/agentflow_computer_mcp/platform/: __init__.py  base.py  linux.py  mac.py  windows.py
src/agentflow_computer_mcp/tools/: clipboard.py  code.py  fs.py  keyboard.py  mouse.py  opencode_installer.py  screen.py  screen_record.py  shell.py  window.py
src/agentflow_computer_mcp/winapp/: __init__.py  __main__.py  actions.py  autostart.py  cloud.py  daemon_probe.py  icon.py  menu.py  state.py  tray.py
tests/: test_af_client.py  test_agent_dev_brief.py  test_agent_log_tailer.py  test_check_update.py  test_chrome_cookies.py  test_chrome_cookies_mac.py  test_chrome_cookies_win.py  test_code_agents.py  test_coding_tools.py  test_connect_integration.py  test_connect_integration_direct.py  test_cookie_tools.py  test_curl_fallback.py  test_desktop_cli.py  test_desktop_tools.py  test_dev_server_fallback.py  test_driver_state.py  test_entrypoint_preinstall.py  test_firefox_driver.py  test_fs.py  test_health.py  test_heartbeat_loop.py  test_hello_screen_size.py  test_install_scripts.py  test_integrations_prompt.py  test_linux_backend.py  test_logging_setup.py  test_loop_prompt.py  test_loop_reasoning_effort.py  test_memory.py  test_multi_agent_bootstrap.py  test_multi_agent_budget.py  test_multi_agent_e2e.py  test_multi_agent_pool.py  test_multi_agent_router.py  test_multi_agent_runtime.py  test_multi_agent_slot.py  test_multi_agent_socket.py  test_observability.py  test_opencode_installer.py  (+29 more)
tests/cli/: test_agent_list.py  test_budget.py  test_daemon_status.py  test_format.py  test_goal_create.py  test_login.py  test_whoami.py
tests/installer/: test_autostart_fallback.py  test_defender_exclusion.py  test_pyinstaller_bundle.py  test_single_token.py
tests/integration/: conftest.py  runtime_harness.py  test_multi_agent_lifecycle.py
tests/winapp/: test_actions.py  test_autostart.py  test_daemon_probe.py  test_entry.py  test_rest_client.py  test_tray_menu.py
winapp/: README.md
