[project]
name = "agentflow-computer-mcp"
version = "0.4.5"
description = "Local MCP server + desktop daemon for AgentFlow agents (macOS, Linux, Windows)"
readme = "README.md"
authors = [
    { name = "AgentFlow", email = "lnlockly@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.2.0",
    "pyautogui>=0.9.54",
    "websockets>=13.0",
    "mss>=9.0",
    "Pillow>=10.0",
    "tomli>=2.0; python_version < '3.11'",
    "pyobjc-framework-Quartz>=10.0; sys_platform == 'darwin'",
    "pywin32>=306; sys_platform == 'win32'",
    "pyperclip>=1.8; sys_platform == 'win32'",
    "psutil>=5.9; sys_platform == 'win32'",
    "typer>=0.12",
    "httpx>=0.27",
]

[project.optional-dependencies]
linux = []
windows = []
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "pytest-timeout>=2.3",
    "ruff>=0.7",
    # playwright is imported by tests/test_firefox_driver.py at module
    # load time; mark it as a dev dep so CI installs it across all
    # platforms. The runtime daemon only uses it when the Firefox
    # driver is actually instantiated.
    "playwright>=1.40",
]

[project.scripts]
agentflow-computer-mcp = "agentflow_computer_mcp.__main__:main"
agentflow-desktop = "agentflow_computer_mcp.desktop_cli:main"
agentflow = "agentflow_computer_mcp.cli.main:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
# inline HTML/JS template in viewer.py and AppleScript one-liners exceed 120 but are unavoidable
per-file-ignores = { "src/agentflow_computer_mcp/driver/viewer.py" = ["E501"], "src/agentflow_computer_mcp/driver/desktop_tools.py" = ["E501"], "src/agentflow_computer_mcp/platform/mac.py" = ["E501"], "src/agentflow_computer_mcp/platform/linux.py" = ["E501"], "src/agentflow_computer_mcp/platform/windows.py" = ["E501"] }

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"agentflow_computer_mcp" = ["py.typed"]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "pytest-timeout>=2.3",
    "ruff>=0.7",
    "playwright>=1.40",
]
